# oz_Django

./: .gitignore  pyproject.toml
Day1/bookmark/: .python-version  pyproject.toml
Day1/bookmark/config/: settings.py  urls.py
Day1/bookmark/templates/: movie_detail.html
Day1/gugudan/: db.sqlite3
Day1/gugudan/config/: settings.py  urls.py
Day1/gugudan/templates/: gugudan.html
Day2/bookmarkApp/: db.sqlite3  pyproject.toml
Day2/bookmarkApp/bookmark/: admin.py  apps.py  models.py  views.py
Day2/bookmarkApp/config/: settings.py  urls.py
Day2/bookmarkApp/templates/: bookmark_detail.html  bookmark_list.html  movie_detail.html
Day2/todo/: db.sqlite3
Day2/todo/config/: settings.py  urls.py
Day2/todo/templates/: todo_detail.html  todo_list.html
Day2/todo/todo/: admin.py  models.py  views.py
Day3/blog/: db.sqlite3
Day3/blog/blog/: models.py  views.py
Day3/blog/config/: settings.py  urls.py
Day3/blog/member/: views.py
Day3/blog/templates/: blog_detail.html  blog_list.html
Day4/blog/: db.sqlite3
Day4/blog/blog/: forms.py  (+2 more)
Day5/blog/: db.sqlite3
Day6/blog/: db.sqlite3  pyproject.toml
Day6/blog/blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
Day6/blog/blog/migrations/: 0004_comment.py  0005_alter_comment_options_alter_comment_content.py
Day6/blog/config/: settings.py  urls.py
Day6/blog/templates/: base.html  blog_detail.html  blog_form.html  blog_list.html  form-js.html  pagination.html
Day6/blog/templates/registration/: login.html  signup.html
Day6/blog/utils/: models.py
TodoApp/todo/: db.sqlite3
(+43 files in other folders)
