[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["김민주 <minjuju518@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.8"
ipython = "^9.7.0"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
